--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 .text{
     width: 50%;
-    height: 100%;
+    height: 93%;
     background-color: hsl(243, 37%, 21%);
     display: flex;
     justify-content: space-around;
@@ -29,6 +29,8 @@ body{
     row-gap: 20px;
     padding-left: 5%;
     padding-right: 5%;
+    position: relative;
+    padding-top: 3%;
 
     /* padding: 100px 100px 100px 100px; */
     
